--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   "license": "ISC",
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.0",
-    "antd": "^4.20.6",
+    "antd": "^4.21.0",
     "bcrypt": "^5.0.0",
     "concurrently": "^6.0.0",
     "cookie-parser": "^1.4.5",
@@ -29,6 +31,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.13",
     "peer": "^0.6.1",
+    "react-tabs": "^5.1.0",
     "socket.io": "^3.1.2"
   },
   "devDependencies": {
